# dataforseo-claude

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  install.sh  plan.md  requirements.txt
agents/: seo-backlinks.md  seo-competitors.md  seo-content.md  seo-keywords.md  seo-technical.md
seo/: SKILL.md
seo/schema/: audit_input.example.json
seo/scripts/: backlinks.py  dataforseo_client.py  domain_overview.py  generate_pdf_report.py  keyword_research.py  on_page_audit.py  preflight.sh  serp_check.py
skills/seo-audit/: SKILL.md
skills/seo-backlinks/: SKILL.md
skills/seo-compare/: SKILL.md
skills/seo-competitors/: SKILL.md
skills/seo-content/: SKILL.md
skills/seo-content-gap/: SKILL.md
skills/seo-keywords/: SKILL.md
skills/seo-quick/: SKILL.md
skills/seo-rankings/: SKILL.md
skills/seo-report/: SKILL.md
skills/seo-report-pdf/: SKILL.md
skills/seo-technical/: SKILL.md
skills/seo-watchlist/: SKILL.md
web/: .env.example  .gitignore  .npmrc  README.md  middleware.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  trigger.config.ts  tsconfig.json
web/.claude/agents/: trigger-dev-task-writer.md
web/app/: layout.tsx  page.tsx
web/app/(staff)/: layout.tsx
web/app/login/: login-form.tsx  page.tsx
web/components/ui/: badge.tsx  (+1 more)
web/db/: policies.sql  seed.sql
web/lib/: share.ts  storage.ts  task-types.ts  types.ts  workspace-context.tsx
worker/: .env.example  .gitignore  Dockerfile  README.md  agent.py  composite.py  main.py  path_setup.py  pyproject.toml  railway.toml  scrub.py  steps.py  system_prompts.py  tools.py
(+21 files in other folders)
