[project]
name = "dataforseo-claude-worker"
version = "0.1.0"
description = "FastAPI worker that runs Claude API agent loops orchestrating DataForSEO SEO scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "anthropic>=0.40.0",
  "supabase>=2.10.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Treat the worker dir itself as the package root: ship the top-level modules.
packages = []
include = [
  "main.py",
  "agent.py",
  "tools.py",
  "steps.py",
  "composite.py",
  "system_prompts.py",
]

[tool.uv]
# Pinned for reproducibility; bump as needed.
package = true
